# Otus_allocator

./: CMakeLists.txt  README.md  lib_allocators.h  lib_containers.h  main.cpp
.github/workflows/: allocator.yml
.gitignore/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  allocator.sln  allocator.vcxproj  allocator.vcxproj.filters  cmake_install.cmake  ip_filter.sln
.gitignore/Debug/: allocator.ilk
.gitignore/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
.gitignore/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
.gitignore/allocator.dir/Debug/allocator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  allocator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
